gcc/testsuite/rust/rustc/ui/parser/raw/raw-string-2.rs
fn main() {
    let x = r###"here's a long string"# "# "##;
// { dg-error ".E0748." "" { target *-*-* } .-1 }
}

